fix flickering and added eth latam constant

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -30,3 +30,8 @@ p {
 .btn.btn-ghost {
   @apply shadow-none;
 }
+
+.zupass-popup{
+    background-color: #19473f;
+    min-height: 100vh;
+}
